index html changes and fb sahre button added

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Learn with Community" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -26,8 +23,25 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Datacode.in</title>
+    <!-- For FB SHARE BUTTON -->
+    <meta property="og:url" content="https://www.datacode.in" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Find and Learn" />
+    <meta property="og:description" content="Learn from the Communities" />
+    <meta
+      property="og:image"
+      content="https://www.datacode.in/assets/images/datacodeheader1.jpeg"
+    />
   </head>
   <body>
+    <!-- For FB  SHARE BUTTON -->
+    <div id="fb-root"></div>
+    <script
+      async
+      defer
+      crossorigin="anonymous"
+      src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v6.0&appId=682148765561455&autoLogAppEvents=1"
+    ></script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
