--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Google adsence -->
+    <script
+      data-ad-client="ca-pub-9405423782162837"
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
+
     <title>Datacode.in</title>
     <!-- For FB SHARE BUTTON -->
     <meta property="og:url" content="https://www.datacode.in" />
