--- a/public/index.html
+++ b/public/index.html
@@ -23,11 +23,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- Google adsence -->
-    <script
-      data-ad-client="ca-pub-9171324299985490"
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
-    ></script>
+    <script data-ad-client="ca-pub-9405423782162837" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+   
+   
     <title>Datacode.in</title>
     
     <!-- ------------------------------------------ -->
