--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     -->
     <!-- Google adsence -->
     <script data-ad-client="ca-pub-9405423782162837" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-   
+    <script src="https://kit.fontawesome.com/c53ea66bc5.js" crossorigin="anonymous"></script>   
    
     <title>Datacode.in</title>
     
