azure issue resolve CORS

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale = 1.0, 
       maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#000000" />
-
+    <!-- IMP TAG ------------>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <!-- ---------------- -->
     <meta name="description" content="Learn with Community" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon192.png" />
     <!--
