--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
     <script data-ad-client="ca-pub-9405423782162837" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script src="https://kit.fontawesome.com/c53ea66bc5.js" crossorigin="anonymous"></script>   
    
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
     <title>Datacode.in</title>
     
     <!-- ------------------------------------------ -->
